# MySRefl

./: .gitignore  CMakeLists.txt  README.md
cmake/: MySReflAutoRefl.cmake
config/: Config.cmake.in
data/: enum.h  test.h  test_refl.inl
doc/: intro.md
include/: MySRefl.h  MySRefl_99.h  MySRefl_99_clang.h
include/MySRefl/: Attr.h  AttrList.h  Base.h  BaseList.h  ElemList.h  Field.h  FieldList.h  MySRefl.h  NamedValue.h  TStr.h  TypeInfo.h  TypeInfoBase.h  Util.h  config.h
include/MySRefl/detail/: Attr.inl  ElemList.inl  FieldTraits.h  NamedValue.inl  TStr.inl  TypeInfoBase.inl  Util.h  Util.inl
src/00_basic/: main.cpp
src/AutoRefl/: AutoRefl.cpp  AutoRefl.h  CMakeLists.txt  Meta.cpp  Meta.h  MetaGenerator.cpp  MetaGenerator.h  TypeInfoGenerator.cpp  TypeInfoGenerator.h  main.cpp
src/EMPTY/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/test/00_basic/: CMakeLists.txt  main.cpp
src/test/00_readme/: main.cpp
src/test/01_template/: main.cpp
src/test/02_static/: main.cpp
src/test/03_func/: main.cpp
src/test/04_enum/: main.cpp
src/test/05_base/: main.cpp
src/test/05_inheritance/: main.cpp
src/test/05_subclass/: main.cpp
src/test/06_99/: CMakeLists.txt  MySRefl_99.h  main.cpp
src/test/07_virtual/: main.cpp
src/test/08_mask/: main.cpp
src/test/09_AutoRefl/00_basic/: CMakeLists.txt  Point.h  Vec.h  Vec_AutoRefl.inl  main.cpp
src/test/10_type_attr/: CMakeLists.txt  main.cpp
