CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(MySRefl VERSION 0.8.1)
MESSAGE(STATUS "Project: ${PROJECT_NAME} ${PROJECT_VERSION}")

INCLUDE(cmake/InitMyCMake.cmake)
INCLUDE(cmake/MySReflAutoRefl.cmake)

INIT_MYCMAKE(VERSION 0.6.4)

INIT_PROJECT()

OPTION(MySRefl_Build_AutoRefl "Build AutoRefl" OFF)
IF (MySRefl_Build_AutoRefl)
    MESSAGE(STATUS "MySRefl build AutoRefl")
    ADD_DEP(MyANTLR 0.2.1)
ELSE ()
    MESSAGE(STATUS "MySRefl doesn't build AutoRefl")
ENDIF ()

ADD_DEP(MyTemplate 0.7.2)

ADD_SUB_DIRS_REC(include)
ADD_SUB_DIRS_REC(src)

SET(INSTALL_FILES "")
IF (MySRefl_Build_AutoRefl)
    LIST(APPEND INSTALL_FILES "${PROJECT_SOURCE_DIR}/cmake/MySReflAutoRefl.cmake")
ENDIF ()

PACKAGE_NAME(PACKAGE_NAME)
INSTALL(
        FILES
        ${INSTALL_FILES}
        DESTINATION "${CMAKE_INSTALL_PREFIX}/${PACKAGE_NAME}/cmake"
)

EXPORT_TARGETS(
        TARGET
        DIRECTORIES
        "include"
)